# YARVS

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.txt  flake.nix
code-gen/: CMakeLists.txt  decoder-generator.py  generator.py
include/: bits_manipulation.hpp  common.hpp  config.hpp  csr.hpp  decoder.hpp  elf_loader.hpp  executor.hpp  hart.hpp  instruction.hpp  reg_file.hpp
include/cache/: lru.hpp
include/memory/: memory.hpp  mmap_wrapper.hpp  pte.hpp  virtual_address.hpp
include/privileged/: cs_regfile.hpp  xtvec.hpp
include/privileged/machine/: mcause.hpp  misa.hpp  mstatus.hpp
include/privileged/supervisor/: satp.hpp  scause.hpp  sstatus.hpp
include/supervisor/: cs_regfile.hpp  satp.hpp  scause.hpp  sstatus.hpp  stvec.hpp
include/yarvs/: bits_manipulation.hpp  decoder.hpp  elf_loader.hpp  hart.hpp  instruction.hpp  reg_file.hpp
include/yarvs/memory/: memory.hpp  mmap_wrapper.hpp  pte.hpp  virtual_address.hpp
include/yarvs/privileged/: cs_regfile.hpp  xtvec.hpp
include/yarvs/privileged/machine/: mcause.hpp  misa.hpp  mstatus.hpp
include/yarvs/privileged/supervisor/: satp.hpp  scause.hpp  sstatus.hpp
src/: elf_loader.cpp  executor.cpp  hart.cpp  main.cpp
test/unit/: CMakeLists.txt
test/unit/src/: bit_manipulation.cpp  executor.cpp  page_fault.cpp
